--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>ado parcial_1_3603 </title>
+<title> Parcial_1_3603 </title>
 <style>
 #BarraHerramientas {
 padding: 20px 0;
