cambio de color

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 padding: 20px 0;
 border: 5px;
 border-style: solid;
-border-color: purple;
+border-color: rgb(39, 18, 39);
 display: grid;
 }
 #ContenidoSecundario {
 width: 100px;
-border-color: green;
+border-color: rgb(16, 110, 16);
 border-style: solid;
 width: 20%;
 height: 300px;
