--- a/index.html
+++ b/index.html
@@ -2,53 +2,70 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title> Parcial_1_3603 </title>
+<title>Prueba 03-12</title>
 <style>
 #BarraHerramientas {
 padding: 20px 0;
 border: 5px;
 border-style: solid;
-border-color: rgb(39, 18, 39);
+border-color: pink;
 display: grid;
+border-width: 5px;
 }
 #ContenidoSecundario {
 width: 100px;
-border-color: rgb(16, 110, 16);
+border-color: green;
 border-style: solid;
 width: 20%;
-height: 300px;
+height: 290px;
 float: left;
+border-width: 5px;
 }
 #SubBarraDeHerramientas {
-padding: 20px 0;
-border-color: pink;
+border-color: coral;
+border-style: solid;
+border-width: 5px;
+height: 50px
+
+}
+#CuadroAzul {
+border-width: 5px;
+border-color: blue;
 border-style: solid;
 float: right;
-height: 50px;
-width: 79%;
+height: 290px;
+width: 78.4%
 }
 #Contenedor {
-border-color: purple;
+border-color: white;
 border-style: solid;
 text-align: center;
-
+border-width: 5px;
+height: 375px;
 }
 
-
-
+#CuadroCeleste {
+border-color: Aqua;
+border-style: solid;
+text-align: center;
+border-width: 5px;
+height: 300px;
+}
 
 </style>
 </head>
-
 <body>
-
-
-
 <div id="Contenedor">
 <div id="BarraHerramientas">Barra Herramientas</div>
+<div id="CuadroCeleste">
 <div id="ContenidoSecundario">Contenido Secundario</div>
+
+<div id="CuadroAzul">
 <div id="SubBarraDeHerramientas">Sub Barra De Herramientas</div>
 </div>
-</body>
 
+</div>
+
+</div>
+</body>
 </html>
