--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ height: 290px;
 width: 78.4%
 }
 #Contenedor {
-border-color: white;
+border-color: red;
 border-style: solid;
 text-align: center;
 border-width: 5px;
