cambios de color

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Prueba 03-12</title>
+<title>Marcelo Rojas parcial_1_3603</title>
 <style>
 #BarraHerramientas {
 padding: 20px 0;
 border: 5px;
 border-style: solid;
-border-color: pink;
+border-color: purple;
 display: grid;
 border-width: 5px;
 }
