cambios de colores

--- a/index.html
+++ b/index.html
@@ -5,52 +5,60 @@
 <title>Marcelo Rojas parcial_1_3603</title>
 <style>
 #BarraHerramientas {
-padding: 20px 0;
-border: 5px;
-border-style: solid;
-border-color: purple;
-display: grid;
-border-width: 5px;
-}
-#ContenidoSecundario {
-width: 100px;
-border-color: green;
-border-style: solid;
-width: 20%;
-height: 290px;
-float: left;
-border-width: 5px;
-}
-#SubBarraDeHerramientas {
-border-color: coral;
-border-style: solid;
-border-width: 5px;
-height: 50px
-
-}
-#CuadroAzul {
-border-width: 5px;
-border-color: blue;
-border-style: solid;
-float: right;
-height: 290px;
-width: 78.4%
-}
-#Contenedor {
-border-color: red;
-border-style: solid;
-text-align: center;
-border-width: 5px;
-height: 375px;
-}
-
-#CuadroCeleste {
-border-color: Aqua;
-border-style: solid;
-text-align: center;
-border-width: 5px;
-height: 300px;
-}
+    padding: 20px 0;
+    border: 5px;
+    border-style: solid;
+    border-color: purple;
+    display: grid;
+    border-width: 5px;
+    }
+    #ContenidoSecundario {
+    width: 100px;
+    border-color: green;
+    border-style: solid;
+    width: 20%;
+    height: 290px;
+    float: left;
+    border-width: 5px;
+    }
+    #SubBarraDeHerramientas {
+    border-color: coral;
+    border-style: solid;
+    border-width: 5px;
+    height: 50px
+    
+    }
+    #CuadroPurple {
+    border-width: 5px;
+    border-color: purple;
+    border-style: solid;
+    float: right;
+    height: 295px;
+    width: 80%
+    }
+    #CuadroAzul {
+    border-width: 5px;
+    border-color: blue;
+    border-style: solid;
+    float: right;
+    height: 290px;
+    width: 78.4%
+    }
+    #Contenedor {
+    border-color: red;
+    border-style: solid;
+    text-align: center;
+    border-width: 5px;
+    height: 375px;
+    }
+    
+    #CuadroCeleste {
+    border-color: Aqua;
+    border-style: solid;
+    text-align: center;
+    border-width: 5px;
+    height: 300px;
+    }
 
 </style>
 </head>
@@ -61,6 +69,7 @@ height: 300px;
 <div id="ContenidoSecundario">Contenido Secundario</div>
 
 <div id="CuadroAzul">
+<div id="CuadroPurple">
 <div id="SubBarraDeHerramientas">Sub Barra De Herramientas</div>
 </div>
 
